# multiversal

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT.txt  README.md
data/config/: about.cfg  controls.cfg  entities.cfg  game.cfg  level_editor.cfg  menu.cfg  music.cfg  objects.cfg  player.cfg  smooth_mappings.cfg  smooth_tilemap.cfg  sprites.cfg  tile_info.cfg  tilemap.cfg  tiles.cfg
data/levels/: 1.cfg  10.cfg  11.cfg  12.cfg  13.cfg  14.cfg  15.cfg  16.cfg  17.cfg  18.cfg  19.cfg  2.cfg  20.cfg  21.cfg  22.cfg  23.cfg  24.cfg  25.cfg  3.cfg  4.cfg  5.cfg  6.cfg  7.cfg  8.cfg  9.cfg
include/components/: components.h  lasercomponent.h  movingcomponent.h
include/game/: gameevents.h  gameinstance.h  gameresources.h  inaltworld.h  level.h  leveleditor.h  levelloader.h  logicaltiles.h  magicwindow.h  selectiongui.h  tilemapdata.h
include/states/: finalstate.h  gamestate.h  leveleditorstate.h
include/systems/: camerasystem.h  carrysystem.h  inputsystem.h  lasersystem.h  movingsystem.h  objectswitchsystem.h  physicssystem.h  playersystem.h  rendersystem.h  spritesystem.h  switchsystem.h  tilegroupsystem.h  tilesmoothingsystem.h  tilesystem.h
lib/actions/: action.cpp  action.h  actionhandler.cpp  actionhandler.h
lib/audio/: musicplayer.cpp  musicplayer.h
lib/es/: action.cpp  action.h  actionhandler.cpp  actionhandler.h  entityprototypeloader.cpp  entityprototypeloader.h  events.h  systemcontainer.cpp  systemcontainer.h
lib/graphics/: animatedsprite.cpp  animatedsprite.h  camera.cpp  colorcode.cpp  colorcode.h  spriteloader.cpp  spriteloader.h  tilemap.cpp  (+3 more)
(+142 files in other folders)
